--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plants",
+  "name": "seanktakahashi.com",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.tsx",
@@ -18,6 +18,8 @@
     "@babel/preset-typescript": "^7.16.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "sass": "^1.43.5",
+    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
@@ -28,6 +30,7 @@
     "@types/react-redux": "^7.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2"
   }
 }
