--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "seanktakahashi.com",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://seanktakahashi.github.io/",
+  "homepage": "https://seanktakahashi.github.io/seanktakahashi.github.io",
   "main": "src/index.tsx",
   "scripts": {
     "dev": "webpack serve --config webpack.config.js --mode development",
     "build": "webpack --config webpack.config.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sean",
@@ -20,6 +22,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "sass": "^1.43.5",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
