--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack serve --config webpack.config.js --mode development",
     "build": "webpack --config webpack.config.js",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
+    "deploy": "git subtree push --prefix dist origin gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sean",
@@ -22,7 +22,6 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.3",
     "sass": "^1.43.5",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
